--- a/newstyle.css
+++ b/newstyle.css
@@ -832,7 +832,17 @@ transform: 0.5s ease-in-out;
 
     /* Category buttons */
     .category-btn, .category-btnn {
-        font-size: 14px;
+        font-size: 10px;
+        width: 50px;
+        margin-bottom: 20px;
+        gap: 20px;
+        margin-right: 5px;
+        padding: 10px;
+    }
+    }
+    .text-center{
+        margin-top: 0px;
+        margin-bottom: 20px;
     }
 
     /* Contact */
